manifests/backend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    name: backend
    environment: dev
    network-policy: enabled
